@@ -19,6 +19,7 @@ Released ???????? ???, ????
 - Spain fixes #555 (tserekh)
 - Italy fixes #546 (dr-p, rtraverso86)
 - Korea fixes #535 (0xF4D3C0D3)
+- Colombia fixes #564 (jahirfiquitiva)
 
 Version 0.11.3.1
 ================
